--- a/simple-todos.html
+++ b/simple-todos.html
@@ -1,4 +1,3 @@
-<!-- simple-todos.html -->
 <head>
   <title>Todo List</title>
 </head>
@@ -6,10 +5,20 @@
 <body>
   <div class="container">
     <header>
-      <h1>Todo List</h1>
-	  <form class="new-task">
-	    <input type="text" name="text" placeholder="Type to add new tasks" />
-	  </form>
+      <h1>Todo List ({{incompleteCount}})</h1>
+
+      <label class="hide-completed">
+        <input type="checkbox" checked="{{hideCompleted}}" />
+        Hide Completed Tasks
+      </label>
+
+      {{> loginButtons}}
+
+      {{#if currentUser}}
+        <form class="new-task">
+          <input type="text" name="text" placeholder="Type to add new tasks" />
+        </form>
+      {{/if}}
     </header>
 
     <ul>
@@ -20,13 +29,13 @@
   </div>
 </body>
 
-<!-- replace the existing task template with this code -->
 <template name="task">
   <li class="{{#if checked}}checked{{/if}}">
     <button class="delete">&times;</button>
 
     <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
 
-    <span class="text">{{text}}</span>
+    <span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
 </template>
+
